--- a/index.html
+++ b/index.html
@@ -6,41 +6,73 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Creación de base de datos en python
-    </h1>
+    <h1>Creación de una base de datos con python</h1>
+   <p>
+    import time <br>
+import sqlite3 as sql <br>
+def createDB():# Crear o conectar a la BD 'autoconocimiento.db' <br>
+conn = sql.connect("autoconocimiento.db") <br>
+print("Base de datos creada o conectada correctamente.") <br>
+conn.close() <br>
+if __name__ == "__main__": <br>
+createDB() # Primero creamos la base de datos <br>
+   </p> 
 
-    <p>
-        import time <br>
-        import sqlite3 as sql <br>
-        def createDB():# Crear o conectar a la BD 'autoconocimiento.db' <br>
-        conn = sql.connect("autoconocimiento.db") <br>
-        print("Base de datos creada o conectada correctamente.")<br>
-        conn.close()<br>
-        if __name__ == "__main__":<br>
-        createDB()     # Primero creamos la base de datos<br>
+<img src="creacionbdFelipeCruz.PNG" alt="">
 
-    </p>
-
-    <img src="creacionbd.png" alt="">
-
-    <p>
-        def createTable(): <br> 
-    conn = sql.connect("autoconocimiento.db")<br>
-    cursor = conn.cursor()<br>
-    cursor.execute("""<br>
+<h1>Creación de tabla</h1>
+<p>
+    def createTable():  <br>
+    conn = sql.connect("autoconocimientoFelipeCruz.db") <br>
+    cursor = conn.cursor() <br>
+    cursor.execute(""" <br>
                    CREATE TABLE IF NOT EXISTS users (<br>
-                    user_id INTEGER PRIMARY KEY AUTOINCREMENT,<br>
-                    full_name TEXT NOT NULL,<br>
+                    user_id INTEGER PRIMARY KEY AUTOINCREMENT, <br>
+                    full_name TEXT NOT NULL, <br>
                     email TEXT UNIQUE NOT NULL,<br>
-                    password_hash TEXT NOT NULL,<br>
-                    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP<br>
-                    ); """)<br>
-    print("tabla creada exitosamente")<br>
-    </p>
+                    password_hash TEXT NOT NULL, <br>
+                    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP <br>
+                    ); """) <br>
+    print("tabla creada exitosamente")     <br>
+</p>
+    <img src="creartablaFelipeCruz.PNG" alt="">
 
-    <img src="creartabla.png" alt="">
+<h1>Inserción de datos</h1>
+
+<p>
+    def insertRow(user_id,full_name, email, password_hash, created_at): <br>
+    try: <br>
+        conn = sql.connect("autoconocimiento.db") <br>
+        cursor = conn.cursor() <br>
+        instruction = f"INSERT INTO users VALUES ('{user_id}','{full_name}','{email}','{password_hash}','{created_at}')" <br>
+        cursor.execute(instruction) <br>
+        conn.commit() <br>
+        print("fila de 'users' insertada correctamente.") <br>
+    except sql.OperationalError as e: <br>
+        time.sleep(1) #espera de 1 segundo antes de reintentar <br>
+        insertRow(user_id,full_name,email,password_hash,created_at) <br>
+    finally: <br>
+        conn.close() <br>
+
+</p>
+
+<img src="inserciondatosFelipeCruz.PNG" alt="">
+
+<h1>Lectura de datos</h1>
+
+<p>
+    def readRows(): <br>
+    conn = sql.connect("autoconocimientoFelipeCruz.db") <br>
+    cursor = conn.cursor() <br>
+    instruction = f"SELECT * FROM users" <br>
+    cursor.execute(instruction) <br>
+    datos = cursor.fetchall() <br>
+    conn.commit() <br>
+    conn.close() <br>
+    print(datos) <br>
+
+</p>
+<img src="lecturaFelipeCruz.PNG" alt="">
 
 </body>
 </html>
-
