--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ createDB() # Primero creamos la base de datos <br>
 
 <h1>Creación de tabla</h1>
 <p>
+    Usando el siguiente ejemplo, crear la base la tabla asignada a usted dentro de la base de datos que usted creó usando lo explicado en el vídeo: https://youtu.be/Ox6NJji1btM
     def createTable():  <br>
     conn = sql.connect("autoconocimientoFelipeCruz.db") <br>
     cursor = conn.cursor() <br>
